# INF202_Gruppe5

./: .$SYS Diagram.drawio.bkp  .gitignore  .pre-commit-config.yaml  CODE_STRUCTURE.md  ChangeLog.md  IOIAO.txt  LICENSE  MOC_tqdm.py  MOCcv2.py  Neigbor_check.py  README.md  SYS Diagram.drawio  cell.py  flow.py  main.py  mesh.py  pyproject.toml  requirements.in  requirements.txt  src_summary.txt  test_quad.msh  test_quad.vtk  visualize.py  visualize_mesh.py
.github/workflows/: ci.yml
Defaults/: SysConfig.toml  input.toml
Example/Code/: Config.py
Example/Globalcofig/: SysConfig.toml
Example/SimConfig/: BaseSimConfig.toml  HighRESSimConfig.toml  NoVidSimConfig.toml  SPEEDSimConfig.toml  TestSimConfig.toml
Exsample/Code/: Config.py
Exsample/Globalcofig/: SysConfig.toml
Exsample/SimConfig/: BaseSimConfig.toml
Hjelpeoppgaver/: Oppg1.py
Input/: BaseSimConfig.toml  HighRESSimConfig.toml
Input/toml/: NoVidSimConfig.toml
Rapport/: main.tex
rapport/: NMBU.cls  bib.bib  main.bbl  main.blg  main.fdb_latexmk  main.tex
src/: LoadTOML.py  SimManager.py  config.py  flow.py  mesh.py  oil_sink.py  simulation.py  video.py  visualize.py
src/Cells/: cell.py  cellFactory.py  cell_factory.py  line.py  quad.py  triangle.py  vertex.py
src/Geometry/: cell.py  cellFactory.py  cell_refactured.py  line.py  mesh.py  oil_sink.py  triangle.py  vertex.py
src/IO/: LoadTOML.py  cmd.py  config.py  video.py
src/Simulation/: SimManager.py  simulation.py  visualize.py
test/: conftest.py  test_init.py  test_smoke_imports.py
test/IntegrationTest/: test_FactoryAndCell.py  test_main_integration.py
test/SystemTest/: test_main.py
test/UnitTest/: test_Cell.py  test_Line.py  test_LoadTOML.py  test_Shered.py  test_cellFactory.py  test_cell_refactor.py  test_config_usage.py  test_flow.py  (+10 more)
tools/: checkCoverage.py  ci_check_coverage.py
(+6 files in other folders)
